Se modifica seccion historia y una card del index

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <a href="./pages/historia.html"><img class="fotocard1" src="./img/20añosfallecimiento.jpeg"
                                     alt="foto fallecimiento general choi" /></a><br>
                             <div class="card-body fondocard">
-                                <h5 class="card-title textcard">GENERAL CHOI</h5>
+                                <h5 class="card-title textcard">↑ GENERAL CHOI ↑</h5>
                                 <p class="card-text textcard1"> A 20 AÑOS DE SU FALLECIMIENTO </p>
                             </div>
                         </div>
@@ -104,7 +104,7 @@
                             <a href="./pages/galeria.html"><img class="fotocard1" src="./img/mundial2023.jpg"
                                     alt="foto mundial 2023" /></a><br>
                             <div class="card-body fondocard">
-                                <h5 class="card-title textcard">MUNDIAL TAEKWONDO 2023</h5>
+                                <h5 class="card-title textcard">↑ MUNDIAL TAEKWONDO 2023 ↑</h5>
                                 <p class="card-text textcard1">Las mejores fotos!</p>
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                             <a href="./pages/contacto.html"><img class="fotocard1" src="./img/67años.jpg"
                                     alt="foto 67 años tkd" /></a><br>
                             <div class="card-body fondocard">
-                                <h5 class="card-title textcard">CONTACTENOS</h5>
+                                <h5 class="card-title textcard">↑ CONTÁCTANOS ↑</h5>
                             </div>
                         </div>
 
@@ -135,11 +135,11 @@
                     <section class="col-sm-12 col-md-12 col-lg-12">
 
                         <div class="card cardtamano">
-                            <a href="./pages/dondeencontrarnos.html"><img class="fotocard1" src="./img/Worldcup.jpg"
+                            <a href="./pages/dondeencontrarnos.html"><img class="fotocard1" src="./img/fotoentrenamiento3.jpg"
                                     alt="foto mundial 2023" /></a><br>
                             <div class="card-body fondocard">
-                                <h5 class="card-title textcard">¿Queres entrenar con nosotros?</h5>
-                                <p class="card-text textcard1">Haz click en esta foto!</p>
+                                <h5 class="card-title textcard">↑ ¿Quieres entrenar con nosotros? ↑</h5>
+                                <p class="card-text textcard1">Haz click en la foto!</p>
                             </div>
                         </div>
 
