--- a/pages/historia.html
+++ b/pages/historia.html
@@ -144,42 +144,7 @@
                             países, sino también para la formación de la Federación Internacional de Taekwon-Do
                             tal como
                             se la conoce hoy en día.
-                            En 1966, el sueño del joven estudiante enfermizo de la caligrafía,
-                            que llegó a Embajador y a Presidente de la Asociación del arte marcial más respetada
-                            en el
-                            mundo, se hizo realidad. El 22 de marzo, se formó la Federación Internacional de
-                            Taekwon-Do
-                            con las asociaciones en Vietnam, Malasia, Singapur, Alemania Occidental, los Estados
-                            Unidos,
-                            Turquía, Italia, República Árabe de Egipto y Corea.
-                            Los valores filosóficos y los objetivos de Taekwon-Do están firmemente arraigados en
-                            la
-                            tradicional cultura moral de Oriente. En el aspecto técnico, las tácticas defensivas
-                            y
-                            ofensivas se basan en los principios de la física, en particular la Ley de Newton,
-                            que
-                            explica cómo generar la máxima fuerza al aumentar la velocidad y la masa durante la
-                            ejecución de un movimiento.
-                            Queriendo compartir los resultados de sus reflexiones filosóficas y sus experimentos
-                            técnicos, el General Choi planificó y escribió una obra de referencia única, la
-                            Enciclopedia
-                            del Taekwon-Do. En sus quince volúmenes, explicó en detalladamente las normas y
-                            prácticas de
-                            este arte.
-                            Siempre buscando la excelencia, el General Choi presentó al Taekwon-Do como en un
-                            estado de
-                            continua evolución, abierto a los cambios que mejorarían su eficacia. Escribió que
-                            “Cualquier persona que cree que ha cumplido plenamente con su deber pronto
-                            perecerá”. Del
-                            mismo modo, cualquier empresa que considere que ha alcanzado sus objetivos es
-                            probable que
-                            pierda impulso, se estanque y muera.
-                            Desde el comienzo, el Taekwon-Do nunca ha dejado de evolucionar, impulsado por la
-                            fuerte
-                            voluntad y un mucho esfuerzo por su Fundador. Los líderes de la ITF hoy también
-                            reconocen la
-                            necesidad de evolucionar y ellos tienen la misma pasión por el futuro de la
-                            organización.</p>
+                        </p>
 
                     </section>
                 </section>
@@ -226,7 +191,54 @@
 
 
                     </section>
-                </section>
+                </section><br><br><br><br>
+
+                <section class="row">
+                    <section class="col-xl-12">
+                        <p class="textohistoria">
+                            En 1966, el sueño del joven estudiante enfermizo de la caligrafía,
+                            que llegó a Embajador y a Presidente de la Asociación del arte marcial más respetada
+                            en el
+                            mundo, se hizo realidad. El 22 de marzo, se formó la Federación Internacional de
+                            Taekwon-Do
+                            con las asociaciones en Vietnam, Malasia, Singapur, Alemania Occidental, los Estados
+                            Unidos,
+                            Turquía, Italia, República Árabe de Egipto y Corea.
+                            Los valores filosóficos y los objetivos de Taekwon-Do están firmemente arraigados en
+                            la
+                            tradicional cultura moral de Oriente. En el aspecto técnico, las tácticas defensivas
+                            y
+                            ofensivas se basan en los principios de la física, en particular la Ley de Newton,
+                            que
+                            explica cómo generar la máxima fuerza al aumentar la velocidad y la masa durante la
+                            ejecución de un movimiento.
+                            Queriendo compartir los resultados de sus reflexiones filosóficas y sus experimentos
+                            técnicos, el General Choi planificó y escribió una obra de referencia única, la
+                            Enciclopedia
+                            del Taekwon-Do. En sus quince volúmenes, explicó en detalladamente las normas y
+                            prácticas de
+                            este arte.
+                            Siempre buscando la excelencia, el General Choi presentó al Taekwon-Do como en un
+                            estado de
+                            continua evolución, abierto a los cambios que mejorarían su eficacia. Escribió que
+                            “Cualquier persona que cree que ha cumplido plenamente con su deber pronto
+                            perecerá”. Del
+                            mismo modo, cualquier empresa que considere que ha alcanzado sus objetivos es
+                            probable que
+                            pierda impulso, se estanque y muera.
+                            Desde el comienzo, el Taekwon-Do nunca ha dejado de evolucionar, impulsado por la
+                            fuerte
+                            voluntad y un mucho esfuerzo por su Fundador. Los líderes de la ITF hoy también
+                            reconocen la
+                            necesidad de evolucionar y ellos tienen la misma pasión por el futuro de la
+                            organización.
+
+
+                        </p>
+
+                    </section>
+                </section><br><br><br><br><br><br>
+
 
                 <section class="row">
                     <section class="col-xl-12">
