se modifican styles

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -44,7 +44,7 @@
                                             <a class="nav-link navtexto" href="../pages/historia.html">Historia</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link navtexto" href="../pages/galeria.html">Galeria</a>
+                                            <a class="nav-link navtexto" href="../pages/galeria.html">Galería</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link navtexto"
@@ -73,7 +73,7 @@
                         <!--Formulario para contactar-->
                         <br>
                         <h1 class="titulo1 bord1"><img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo"
-                                class="itf">Contactanos<img style="margin-left: 30px;" src="../img/itf.jpg"
+                                class="itf">Contáctanos<img style="margin-left: 30px;" src="../img/itf.jpg"
                                 alt="itf logo" class="itf"></h1>
                         <br><br>
 
@@ -84,41 +84,41 @@
                     <div class="formunew">
                         <div class="col-md-12">
                             <label for="inputNombre" class="form-label textoform">Nombre</label>
-                            <input type="text" class="form-control textoform" id="inputName" placeholder="Tu nombre...">
+                            <input type="text" class="form-control textoform1" id="inputName" placeholder="Tu nombre...">
                         </div><br>
                         <div class="col-md-12">
                             <label for="inputEmail4" class="form-label textoform">Email</label>
-                            <input type="email" class="form-control textoform" id="inputEmail4"
+                            <input type="email" class="form-control textoform1" id="inputEmail4"
                                 placeholder="Tu Email...">
                         </div><br>
                         <div class="col-md-12">
-                            <label for="inputNumero" class="form-label textoform">Telefono</label>
-                            <input type="text" class="form-control textoform" id="inputnumber"
+                            <label for="inputNumero" class="form-label textoform">Teléfono</label>
+                            <input type="text" class="form-control textoform1" id="inputnumber"
                                 placeholder="Tu Número de telefono">
                         </div><br>
                         <div class="col-md-12">
-                            <label for="inputState" class="form-label textoform">Pais</label><br>
-                            <select class="textoform">
-                                <option class="textoform">Argentina</option>
-                                <option class="textoform">Brasil</option>
-                                <option class="textoform">Uruguay</option>
-                                <option class="textoform">Paraguay</option>
-                                <option class="textoform">Chile</option>
-                                <option class="textoform">Colombia</option>
-                                <option class="textoform">Venezuela</option>
-                                <option class="textoform">Otros</option>
+                            <label for="inputState" class="form-label textoform">País</label><br>
+                            <select class="textoform1">
+                                <option class="textoform1">Argentina</option>
+                                <option class="textoform1">Brasil</option>
+                                <option class="textoform1">Uruguay</option>
+                                <option class="textoform1">Paraguay</option>
+                                <option class="textoform1">Chile</option>
+                                <option class="textoform1">Colombia</option>
+                                <option class="textoform1">Venezuela</option>
+                                <option class="textoform1">Otros</option>
                             </select>
                         </div><br>
                         <div class="col-md-12">
-                            <label for="exampleFormControlTextarea1" class="form-label textoform">Comentario</label>
-                            <textarea class="form-control textoform" id="exampleFormControlTextarea1" rows="3"
-                                placeholder="Tu Comentario..."></textarea>
+                            <label for="exampleFormControlTextarea1" class="form-label textoform">Tus comentários</label>
+                            <textarea class="form-control textoform1" id="exampleFormControlTextarea1" rows="3"
+                                placeholder="Deja tu consulta aquí..."></textarea>
                         </div><br>
                         <div class="col-md-12">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" id="gridCheck">
-                                <label class="form-check-label textoform" for="gridCheck">
-                                    Acepto que se comuniquen conmigo
+                                <label class="form-check-label textoform2" for="gridCheck">
+                                    Acepto que se contácten conmigo
                                 </label>
                             </div>
                         </div><br>
