--- a/pages/dondeencontrarnos.html
+++ b/pages/dondeencontrarnos.html
@@ -44,7 +44,7 @@
                                             <a class="nav-link navtexto" href="../pages/historia.html">Historia</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link navtexto" href="../pages/galeria.html">Galeria</a>
+                                            <a class="nav-link navtexto" href="../pages/galeria.html">Galería</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link navtexto"
@@ -71,7 +71,7 @@
                     <section class="col-xl-12">
                         <br>
                         <h1 class="titulo1 bord1"><img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo"
-                                class="itf">¡Entrena con nosotros!<img style="margin-left: 30px;" src="../img/itf.jpg"
+                                class="itf">¡Entrená con nosotros!<img style="margin-left: 30px;" src="../img/itf.jpg"
                                 alt="itf logo" class="itf"></h1>
                         <br><br><br>
                     </section>
