--- a/pages/historia.html
+++ b/pages/historia.html
@@ -44,7 +44,7 @@
                                             <a class="nav-link navtexto" href="../pages/historia.html">Historia</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link navtexto" href="../pages/galeria.html">Galeria</a>
+                                            <a class="nav-link navtexto" href="../pages/galeria.html">Galería</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link navtexto"
@@ -108,7 +108,7 @@
                             colonial.
                             Esta unidad fue influenciada por la política presidencial que veía mal abrazar
                             preferencias
-                            japonesas.
+                            japonesas. <br><br>
                             El General Choi sabía que necesitaría la eventual autorización del Presidente y
                             percibió que lo lograría con la ayuda de prestigiosos miembros de la sociedad.
                             Finalmente la Junta aprobó el nombre de Taekwon-Do, que presentó. Este nombre único
@@ -127,7 +127,7 @@
                             por el
                             Lejano Oriente. La misma fue un gran éxito, asombrando a todos los espectadores con
                             la
-                            excelencia de las técnicas del Taekwon-Do.
+                            excelencia de las técnicas del Taekwon-Do. <br><br>
                             En ese año, Choi fue elevado a dos puestos ilustres; Presidente de su recién formada
                             Asociación Coreana de Taekwon-Do y Comandante Adjunto del segundo Ejército en Tae
                             Gu. En
@@ -211,7 +211,7 @@
                             ofensivas se basan en los principios de la física, en particular la Ley de Newton,
                             que
                             explica cómo generar la máxima fuerza al aumentar la velocidad y la masa durante la
-                            ejecución de un movimiento.
+                            ejecución de un movimiento. <br><br>
                             Queriendo compartir los resultados de sus reflexiones filosóficas y sus experimentos
                             técnicos, el General Choi planificó y escribió una obra de referencia única, la
                             Enciclopedia
@@ -265,7 +265,7 @@
                             militar de
                             Taekwon-Do en las demostraciones en Vietnam y Taiwán, marcando la primera vez en la
                             historia
-                            que el Taekwon-Do fue realizado en el extranjero.
+                            que el Taekwon-Do fue realizado en el extranjero. <br><br>
                             El General Choi idearía las 26 Formas o Tuls. Estas fueron las primeras formas
                             coreanas
                             jamás creadas.
@@ -281,7 +281,7 @@
                             vez que Corea fue sede de una organización internacional.
                             La ITF crecería hasta tener millones de miembros en más de cien países y él
                             presidiría
-                            durante su vida, 17 de sus campeonatos del mundo.
+                            durante su vida, 17 de sus campeonatos del mundo. <br><br>
                             El General Choi viajó por el mundo sin
                             descanso para enseñar y promover el Taekwon-Do original. Fue el autor de 5 libros
                             sobre el
