--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                             <a class="nav-link navtexto" href="./pages/historia.html">Historia</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link navtexto" href="./pages/galeria.html">Galeria</a>
+                                            <a class="nav-link navtexto" href="./pages/galeria.html">Galería</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link navtexto"
